<?xml version="1.0" encoding="UTF-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorSurfaceVariant">

    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:contentScrim="?colorSurfaceVariant"
      app:layout_scrollFlags="scroll|exitUntilCollapsed"
      app:titleEnabled="false">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingTop="?actionBarSize"
        android:paddingEnd="32dp"
        android:paddingBottom="32dp">

        <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/id">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:hint="@string/name">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:hint="@string/mark">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valueEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>

      <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_collapseMode="pin"/>
    </com.google.android.material.appbar.CollapsingToolbarLayout>
  </com.google.android.material.appbar.AppBarLayout>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:orientation="vertical"
      android:padding="16dp"
      app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
      app:spanCount="3"/>

    <LinearLayout
      android:id="@+id/emptyView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="160dp"
      android:gravity="center"
      android:orientation="vertical">

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_desc1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"/>

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/empty_desc2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
    </LinearLayout>
  </FrameLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/action"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="32dp"
    android:contentDescription="@string/btn_send_desc"
    android:visibility="gone"
    app:layout_anchor="@id/appbarLayout"
    app:layout_anchorGravity="bottom|end"
    app:srcCompat="@drawable/btn_send"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
